[package]
name = "primerstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
bio = "1.5"
flate2 = "1.0"
chrono = "0.4"
itertools = "0.12"
anyhow = "1.0"
rayon = "1.8"
edlib_rs = { path = "../edlib-rs" }  # 指定本地路径
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
